fix overlap

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ p{
 }
 .about-me-section{
     min-width: 100%;
-    height: 550px;
+    height: 570px;
     margin: 30px auto;
 }
 .project-section{
